Add flower, flowers orders and allow order creation with flowers
